<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">


    <TextView
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/category_numbers"
        android:text="@string/category_numbers"
        style="@style/StringStyle"/>
    <!-- android:background="@color/category_numbers"-->

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/category_family"
        android:text="@string/category_family"
        style="@style/StringStyle"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/category_colors"
        android:text="@string/category_colors"
        style="@style/StringStyle"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/animals"
        style="@style/StringStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/animals"
        android:textColor="@color/category_animals" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/phrases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/category_phrases"
        android:text="@string/phrases"
        style="@style/StringStyle"/>

</LinearLayout>