<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/conversation"/>

            <TextView
                android:id="@+id/numbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_numbers"
                android:textColor="@color/category_numbers"
                android:textSize="25dp" />
        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/famly_members"
                android:scaleType="centerCrop"/>


            <TextView
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_family"
                android:textColor="@color/category_family"
                android:textSize="25dp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/colors" />

            <TextView
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_colors"
                android:textColor="@color/category_colors"
                android:textSize="25dp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/animals" />

            <TextView
                android:id="@+id/animals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Animals"
                android:textColor="@color/colorAccent"
                android:textSize="25dp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/phrases" />

            <TextView
                android:id="@+id/phrases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phrases"
                android:textColor="@color/category_phrases"
                android:textSize="25dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>